Changed format of list

--- a/intensified.html
+++ b/intensified.html
@@ -120,7 +120,7 @@
         <li>Reading assignment
           <ul>
             <li><a href="notes/03geometry.pdf">Notes 
-              3: Geometry and trigonometry review</a>            </li>
+              3: Geometry and trigonometry review</a></li>
           </ul>
         </li>
         <ul>
@@ -142,15 +142,15 @@
         </li>
         <li>Finish Lab 1.1 analysis</li>
         <li>Begin PS-1a<br>
-          <ul>
-            <li>1. What is the percent uncertainty in the measurement 2.26 +/- 0.25 m?</li>
-            <li>2. A typical atom has a diameter of about 1.0 x 10E-10 m. (a) What is this in inches? (b) How many atoms are there along a 1.0 cm line?</li>
-            <li>3. How much longer (percentage) is a one-mile race than a 1500-m race (&quot;the metric mile&quot;)?</li>
-            <li>4. Estimate the number of times a human heart beats in a lifetime.</li>
-            <li>5. Discuss how you would estimate the number of hours you have spent in school thus far in your life. Then make the estimate.</li>
+          <ol>
+            <li>What is the percent uncertainty in the measurement 2.26 +/- 0.25 m?</li>
+            <li>A typical atom has a diameter of about 1.0 x 10<sup>-10</sup> m. (a) What is this in inches? (b) How many atoms are there along a 1.0 cm line?</li>
+            <li>How much longer (percentage) is a one-mile race than a 1500-m race (&quot;the metric mile&quot;)?</li>
+            <li>Estimate the number of times a human heart beats in a lifetime.</li>
+            <li>Discuss how you would estimate the number of hours you have spent in school thus far in your life. Then make the estimate.</li>
           </ul>
         </li>
-    </ul></td>
+    </ol></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
