--- a/intensified.html
+++ b/intensified.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<title>Physics</title>
+	<title>Intensified Physics</title>
 	
     <link rel="stylesheet" href="css/main.css" type="text/css" />
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+	<meta http-equiv="Content-Type" content="text/html; charset=uft-8" />
 </head>
 
 
 <body>
 <div id="headinfo">
 	<h1>Intensified Physics</h1>
-	<h2>Andy Eschbacher, 2013&mdash;2014</h2>
+	<h2>Andy Eschbacher, 2013 &mdash; 2014</h2>
 	<h2>Washington-Lee High School</h2>
 </div>
 
 <div id="nav">
 	<p>Jump to a particular week:</p>
-	<p><ul><li><a href="#9sep">9 Sep</a></li><li><a href="#16sep">16 Sep</a></li></ul></p>
+    <ul><li><a href="#9sep">9 Sep</a></li><li><a href="#16sep">16 Sep</a></li></ul>
 </div>
 
 
 <!-- Week 1 -->
 <table class="weekSummary">
   <tr>
-    <th>Week 1</th>
+    <th><p>Week 1</p></th>
     <th><p>Classwork</p></th>
     <th><p>Homework</p></th>
   </tr>
@@ -44,11 +43,11 @@
 			<li>Send me an email and CC your parents. My email address is: <a href="mailto:peter.eschbacher@apsva.us">peter.eschbacher@apsva.us</a><br />
 			I'd like to have the email address of you and your parents on file if needed.</li>
 			<li>Enroll in <a href="http://www.webassign.com/">WebAssign.com</a>
-			  <ul>
-				  <li>Go to <a href="http://www.webassign.com/">WebAssign.com</a>, click on "I Have a Class Key", and enter <strong>washingtonlee.va 2650 3038</strong></li>
-				  <li>The cost is $10.50. Let me know if you need help with this expense.</li>
-				  <li>HW: <span style="text-decoration: underline;">Getting Started with WebAssign</span>, Due <span alt="No Later Than">NLT</a> 11 pm Thur, 12 Sep</li>
-				</ul>
+                <ul>
+                    <li>Go to <a href="http://www.webassign.com/">WebAssign.com</a>, click on "I Have a Class Key", and enter <strong>washingtonlee.va 2650 3038</strong></li>
+                    <li>The cost is $10.50. Let me know if you need help with this expense.</li>
+                    <li>HW: <span style="text-decoration: underline;">Getting Started with WebAssign</span>, Due NLT 11 pm Thur, 12 Sep</li>
+                </ul>
 			</li>
 			<li>Enroll in <a href="http://www.explorelearning.com/">ExploreLearning.com</a>
 				<ul>
@@ -83,55 +82,44 @@
           <ul>
             <li><a href="notes/01physics.pdf">Notes 1, The realm of physics</a> (see <a href="http://htwins.net/scale2/">here</a> and <a href="http://www.youtube.com/watch?v=0fKBhvDjuy0">here</a>, too)</li>
             <li><a href="notes/02units.pdf">Notes 2: The international system of units</a></li>
-            <li>Answer questions on notes - <a href="homework/HW02units.doc">Questions on Notes 2</a></li>
+            <li>Answer <a href="homework/HW01physics.doc">questions on Notes 1</a></li>
+            <li>Answer <a href="homework/HW02units.doc">questions on Notes 2</a></li>
           </ul>
         </li>
-            <ul>
-                <li>Answer questions on notes - <a href="homework/HW01physics.doc">Questions on Notes 1</a></li>
-            </ul>
         <li>Sign up for <a href="http://www.dropbox.com">Dropbox</a> after I send you an email
             <ul>
                 <li>Copy and paste Student CD for Logger Pro</li>
-                <li>Load Logger Pro on home computer</li>
+                <li>Load LoggerPro on home computer</li>
             </ul>
         </li>
     </ul></td>
   </tr>
   <tr>
-    <td><div style="text-align: center;">
+    <td>
         <p>Fri, 6 Sep</p>
-      <p>W</p>
-    </div></td>
+        <p>W</p>
+    </td>
     <td><ul>
-        <li>Discuss course (25)</li>
-        <li>Lab 1.2 Measurement and uncertainty (15)</li>
-        <li>Read handouts
-          (5)
-          <ul>
-            <li><a href="handouts/Scientific_misconduct.doc">Scientific misconduct</a></li>
-            <li><a href="handouts/01ABriefHistory.doc">A 
-              Brief History of Measurement Systems</a></li>
-            <li><a href="handouts/01EnglishCustomaryWeights.doc">English 
-              Customary Weights and Measures</a></li>
+        <li>Questions to the notes, etc. (10)</li>
+        <li>Lab 1.2 Measurement and uncertainty (70)</li>
+        <li>Read handouts (5)
+            <ul>
+                <li><a href="handouts/Scientific_misconduct.doc">Scientific misconduct</a></li>
+                <li><a href="handouts/01ABriefHistory.doc">A Brief History of Measurement Systems</a></li>
+                <li><a href="handouts/01EnglishCustomaryWeights.doc">English Customary Weights and Measures</a></li>
             </ul>
         </li>
     </ul></td>
     <td><ul>
-        <li>Reading assignment
-          <ul>
-            <li><a href="notes/03geometry.pdf">Notes 
-              3: Geometry and trigonometry review</a></li>
-          </ul>
-        </li>
-        <ul>
-          <li><a href="homework/HW03trig.doc">Homework 
-            for notes 3</a></li>
-          <li><a href="notes/04algebra.pdf">Notes 
-            4: Finding a general solution</a> </li>
-          <li><a href="homework/HW04solutions.doc">Homework 
-            for notes 4</a></li>
-          <li><a href="handouts/Scientific_misconduct.doc">Scientific misconduct</a></li>
-        </ul>
+            <li>Reading assignment
+                <ul>
+                    <li><a href="notes/03geometry.pdf">Notes 3: Geometry and trigonometry review</a></li>
+                    <li><a href="homework/HW03trig.doc">Homework for notes 3</a></li>
+                    <li><a href="notes/04algebra.pdf">Notes 4: Finding a general solution</a> </li>
+                    <li><a href="homework/HW04solutions.doc">Homework for notes 4</a></li>
+                    <li><a href="handouts/Scientific_misconduct.doc">Scientific misconduct</a></li>
+                </ul>
+            </li>
         <li>Optional reading
           <ul>
             <li><a href="handouts/01ABriefHistory.doc">A 
@@ -141,21 +129,16 @@
           </ul>
         </li>
         <li>Finish Lab 1.1 analysis</li>
-        <li>Begin PS-1a<br>
+        <li>Begin PS-1a &mdash; <span style="font-weight: bolder;">Due NLT Sept. 16</span><br />
           <ol>
-            <li>What is the percent uncertainty in the measurement 2.26 +/- 0.25 m?</li>
+            <li>What is the percent uncertainty in the measurement 2.26 &plusmn; 0.25 m?</li>
             <li>A typical atom has a diameter of about 1.0 x 10<sup>-10</sup> m. (a) What is this in inches? (b) How many atoms are there along a 1.0 cm line?</li>
             <li>How much longer (percentage) is a one-mile race than a 1500-m race (&quot;the metric mile&quot;)?</li>
             <li>Estimate the number of times a human heart beats in a lifetime.</li>
             <li>Discuss how you would estimate the number of hours you have spent in school thus far in your life. Then make the estimate.</li>
-          </ul>
+          </ol>
         </li>
-    </ol></td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td><p>&nbsp;</p></td>
+    </ul></td>
   </tr>
 </table>
 
@@ -163,49 +146,51 @@
 
 <!-- Week 2 -->
 
-<table class="weekSummary">
+<table class="weekSummary" id="9sep">
   <tr>
-    <th id="9sep">Week 2</th>
-    <th>Classwork</th>
-    <th>Homework</th>
+    <th><p>Week 2</p></th>
+    <th><p>Classwork</p></th>
+    <th><p>Homework</p></th>
   </tr>
   <tr>
-    <td><div align="center">
-        <p><strong>Mon, 9 Sep</strong></p>
-      <p><strong>L</strong></p>
-    </div></td>
-    <td align="center"><ul>
-      <li>
-        <div align="left">Lab 1.2 Measurement and uncertainty (45)</div>
-      </li>
+    <td>
+       <p>Tues, 10 Sep</p>
+         <p>W</p>
+    </td>
+    <td>
+        <ul>
+            <li>Review Lab 1.2 Measurement and uncertainty (45)
+                <ul>
+                    <li><a href="http://www2.honolulu.hawaii.edu/instruct/natsci/science/brill/sci122/SciLab/L5/accprec.html">Accuracy versus Precision</a></li>
+                    <li></li>
+                </ul>
+            </li>
+            <li>Reading assignment quiz &mdash; <a href="./handouts/Scientific_misconduct.doc">Scientific Misconduct</a> (15)</li>
+            <li>Mathematics Background Check (20)</li>
+    </ul></td>
+    <td>
+        <ul>
+            <li>Enroll in <a href="http://www.webassign.com/">WebAssign</a><br />
+              <ul>
+                <li><strong>washingtonlee.va 2650 3038</strong></li>
+                <li>&quot;Intro to WebAssign&quot; <span class="noLaterThan">NLT</span> 11 pm Thur, 12 Sep</li>
+              </ul>
+            </li>
+            <li>Lab 1.2 analysis</li>
+        </ul>
+    </td>
+    </tr>
+    <tr>
+    <td>
+        <p>Thurs, 12 Sep</p>
+        <p>W</p>
+    </td>
+    <td><ul>
+      <li>Lab 1.2 analysis due</li>
+      <li>Take phyiscs pre-test and Cloze survey (35)</li>
+      <li>Discuss note-taking and reading assessments (10)</li>
     </ul></td>
     <td><ul>
-        <li>Enroll in <a href="http://www.webassign.com/">WebAssign</a>
-          <ul>
-            <li><strong>washingtonlee.va 2650 3038</strong></li>
-            <li>&quot;Intro to WebAssign&quot; NLT 11 pm Thur, 12 Sep</li>
-          </ul>
-        </li>
-        <li>Lab 1.1 analysis
-          <ul>
-            <li>Cover sheet</li>
-            <li>Purpose</li>
-            <li>Class notes</li>
-          </ul>
-        </li>
-    </ul></td>
-  </tr>
-  <tr>
-    <td><div align="center">
-        <p><strong>Tues, 10 Sep</strong></p>
-      <p><strong>W</strong></p>
-    </div></td>
-    <td><ul>
-        <li>Reading assignment quiz (15)</li>
-        <li>Lab 1.2 Measurement and uncertainty (30)</li>
-    </ul></td>
-    <td><ul>
-        <li>Lab 1.2 analysis</li>
         <li>PS-1a (see homework for Fri, 7 Sep)</li>
         <li>Read <a href="notes/05uncertainty.pdf">Notes 
           5: Uncertainty and error in measurements</a>
@@ -214,82 +199,61 @@
                 for notes</a></li>
             </ul>
         </li>
-    </ul></td>
-  </tr>
-  <tr>
-    <td>
-      <p align="center"><strong align="left">Wed, 11 Sep</strong></p>
-    <p align="center"><strong align="left">L</strong></p></td>
-    <td><ul>
-        <li>Lab  1.1 graph due</li>
-      <li>Lab 1.2 analysis due</li>
-      <li>Take phyiscs pre-test and Cloze survey (35)</li>
-      <li>Discuss note-taking and reading assessments (10)</li>
-    </ul>
-      <p>&nbsp;</p></td>
-    <td><ul>
-      <li>Read and take notes on Sections 1.1 - 1.8 from textbook</li>
-      <li>PS-1a</li>
-      </ul>
-    <p>&nbsp;</p></td>
-  </tr>
-  <tr>
-    <td><div align="center">
-        <p><strong>Thurs, 12 Sep</strong></p>
-      <p><strong>W</strong></p>
-    </div></td>
-    <td><ul>
-        <li>Discuss Lab 1.2 data (45)</li>
-    </ul></td>
-    <td><ul>
+        <li>Read and take notes on Sections 1.1 - 1.8 from textbook</li>
         <li>Read <a href="notes/08scientificmethod.pdf">Notes 
-          8: The scientific method</a></li>
-      <li>Finish reading and taking notes on Sections 1.1 - 1.8 from textbook</li>
-      <li>Finish PS-1a</li>
+        8: The scientific method</a></li>
     </ul></td>
-  </tr>
-  <tr>
-    <td><div align="center">
-        <p><strong>Fri, 13 Sep</strong></p>
-      <p><strong>L</strong></p>
-    </div></td>
-    <td><ul>
-        <li>Develop concept of motion 
-        for 1d  (45)
-        <ul>
-          <li><a href="handouts/drivingwithphysics.doc">Driving 
-            with Physics</a></li>
-          <li>Usain Bolt videos</li>
-          <li><a href="handouts/sportswithphysics.doc">Running 
-            with Physics</a></li>
-        </ul>
-        </li>
-    </ul></td>
-    <td><ul>
-      <li>Finish handouts (as required)
-          <ul>
-            <li>Driving with Physics</li>
-            <li>Running with Physics</li>
-          </ul>
-      </li>
-      <li>1st Quarter project  proposal (due 9/21): 1D motion
-          <ul>
-            <li>Object to be studied</li>
-            <li>How you expect to collect 
-              data</li>
-          </ul>
-      </li>
-    </ul></td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td><ul>
-      <li>Pass out books (10)</li>
-    </ul></td>
-    <td>&nbsp;</td>
   </tr>
 </table>
 
+
+<p class="returnToPhysics"><a href="http://www.apsva.us/Page/18496">Return to Physics Home Page</a></p>
+
+<table class="weekSummary" id="9sep">
+	<tr>
+    	<th>Week 3</th>
+        <th>Classwork</th>
+        <th>Homework</th>
+    </tr>
+    <tr>
+    	<td><p>Mon, 16 Sept</p><p>W</p></td>
+        <td>
+        <ul>
+        <li>Develop concept of motion for 1d  (45)
+        <ul>
+          <li><a href="handouts/drivingwithphysics.doc">Driving with Physics</a></li>
+          <li>Usain Bolt videos</li>
+          <li><a href="handouts/sportswithphysics.doc">Running with Physics</a></li>
+        </ul>
+        </td>
+      <td>
+			<ul>
+      			<li>Finish reading and taking notes on Sections 1.1 - 1.8 from textbook</li>
+      			<li>Finish handouts (as required)
+      				<ul>
+			            <li>Driving with Physics</li>
+            			<li>Running with Physics</li>
+					</ul></li>
+				<li>1st Quarter project  proposal (due 9/21): 1D motion
+					<ul>
+						<li>Object to be studied</li>
+						<li>How you expect to collect data</li></ul>
+				</li>
+				<li>Finish PS-1a</li>
+			</ul>
+	  </td>
+    </tr>
+    <tr>
+    	<td><p>Wed, 18 Sept</p><p>W</p></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+    	<td><p>Fri, 20 Sept</p><p>W</p></td>
+        <td></td>
+        <td></td>
+    </tr>
+</table>
 
 <p class="returnToPhysics"><a href="http://www.apsva.us/Page/18496">Return to Physics Home Page</a></p>
 
@@ -1993,8 +1957,7 @@
 <p><strong><a href="http://www.apsva.us/Page/18496">Return to Physics Home Page</a></strong></p>
 <table width="1122" border="1" cellpadding="5" cellspacing="3">
   <tr>
-    <th width="100"><div align="center"><strong><a name="3jan" id="19dec3"></a>Week 
-    --</strong></div></th>
+    <th width="100"><div align="center"><strong><a name="3jan" id="19dec3"></a>Week&mdash; </strong></div></th>
     <th width="483"> <div align="center"><strong>Classwork</strong></div></th>
     <th width="489"> <div align="center"><strong>Homework</strong></div></th>
   </tr>
