Added minor updates

--- a/intensified.html
+++ b/intensified.html
@@ -7,6 +7,31 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=uft-8" />
 </head>
 
+<!--
+Table Template:
+
+<table class="weeklySummary" id="DDmmm">
+    <tr>
+        <th><p>Week #</p></th>
+        <th><p>Classwork</p></th>
+        <th><p>Homework</p></th>
+    </tr>
+    <tr>
+        <td><p>Date</p><p>W</p></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td><p>Date</p><p>W</p></td>
+        <td></td>
+        <td></td>
+    </tr>
+
+</table>
+
+
+-->
+
 
 <body>
 <div id="headinfo">
@@ -17,12 +42,12 @@
 
 <div id="nav">
 	<p>Jump to a particular week:</p>
-    <ul><li><a href="#9sep">9 Sep</a></li><li><a href="#16sep">16 Sep</a></li></ul>
+    <ul><li><a href="#9sep">9 Sep</a></li><li><a href="#16sep">16 Sep</a></li><li><a href="#23sep">23 Sep</a></ul>
 </div>
 
 
 <!-- Week 1 -->
-<table class="weekSummary">
+<table class="weekSummary" id="#2sep">
   <tr>
     <th><p>Week 1</p></th>
     <th><p>Classwork</p></th>
@@ -162,7 +187,7 @@
             <li>Review Lab 1.2 Measurement and uncertainty (45)
                 <ul>
                     <li><a href="http://www2.honolulu.hawaii.edu/instruct/natsci/science/brill/sci122/SciLab/L5/accprec.html">Accuracy versus Precision</a></li>
-                    <li></li>
+                    <li>Rhett Allain on <a href="https://www2.southeastern.edu/Academics/Faculty/rallain/plab194/error.html">Uncertainty</a></li>
                 </ul>
             </li>
             <li>Reading assignment quiz &mdash; <a href="./handouts/Scientific_misconduct.doc">Scientific Misconduct</a> (15)</li>
@@ -209,11 +234,11 @@
 
 <p class="returnToPhysics"><a href="http://www.apsva.us/Page/18496">Return to Physics Home Page</a></p>
 
-<table class="weekSummary" id="9sep">
+<table class="weekSummary" id="16sep">
 	<tr>
-    	<th>Week 3</th>
-        <th>Classwork</th>
-        <th>Homework</th>
+    	<th><p>Week 3</p></th>
+        <th><p>Classwork</p></th>
+        <th><p>Homework</p></th>
     </tr>
     <tr>
     	<td><p>Mon, 16 Sept</p><p>W</p></td>
@@ -253,6 +278,27 @@
         <td></td>
         <td></td>
     </tr>
+</table>
+
+<p class="returnToPhysics"><a href="http://www.apsva.us/Page/18496">Return to Physics Home Page</a></p>
+
+<table class="weekSummary" id="23sep">
+    <tr>
+        <th><p>Week 4</p></th>
+        <th><p>Classwork</p></th>
+        <th><p>Homework</p></th>
+    </tr>
+    <tr>
+        <td><p>Tues, 24 Sep</p><p>W</p></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td><p>Thurs, 26 Sep</p><p>W</p></td>
+        <td></td>
+        <td></td>
+    </tr>
+
 </table>
 
 <p class="returnToPhysics"><a href="http://www.apsva.us/Page/18496">Return to Physics Home Page</a></p>
